# top-academy-tgbot

./: .env.example  .gitignore  Caddyfile  README.md  docker-compose.local.yml  docker-compose.yml  test.cpp
backend/: .env.example  CMakeLists.txt  Dockerfile
backend/src/: main.cpp
backend/src/db/: database.cpp  database.hpp
backend/src/journal_api/: journal_client.cpp  journal_client.hpp
backend/src/tma_auth/: tma_auth.cpp  tma_auth.hpp
backend/src/utils/: date_utils.hpp
frontend/: Dockerfile  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.ts  style.css
